Streamlit Secrets Management

--- a/notebooks/03_spotipfy_client_testing.ipynb
+++ b/notebooks/03_spotipfy_client_testing.ipynb
@@ -167,10 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "outputs": [],
    "source": [
-    "a = spotify.access_token"
+    "a = spotify.get_access_token()"
    ],
    "metadata": {
     "collapsed": false,
@@ -181,10 +181,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "import spotipy"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'BQD_Y3wmuckTARymIKz9nEDdF3-PcA1AOULORLzp2tWN-CuoxUpToeM2A2w-mSpuRZ6sNIFYV79rRgnMmJU'"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ],
    "metadata": {
     "collapsed": false,
