Streamlit Secrets Management

--- a/notebooks/03_spotipfy_client_testing.ipynb
+++ b/notebooks/03_spotipfy_client_testing.ipynb
@@ -339,13 +339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "HTTP Error for GET to https://api.spotify.com/v1/playlists/1113039340 with Params: {'fields': '37i9dQZF1EJDvX9MsK3miT', 'market': None, 'additional_types': 'track'} returned 404 due to Invalid playlist Id\n"
+      "2022-02-06 19:12:48.169 ERROR   spotipy.client: HTTP Error for GET to https://api.spotify.com/v1/playlists/1113039340 with Params: {'fields': '37i9dQZF1EJDvX9MsK3miT', 'market': None, 'additional_types': 'track'} returned 404 due to Invalid playlist Id\n"
      ]
     },
     {
@@ -371,6 +371,53 @@
    "source": [
     "playlist = sp.playlist(user_id, \"37i9dQZF1EJDvX9MsK3miT\")\n",
     "name = playlist[\"name\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [],
+   "source": [
+    "token = util.prompt_for_user_token(\n",
+    "user_id, SPOTIPY_SCOPE, client_id = client_id, client_secret = client_secret, redirect_uri='http://localhost/')\n",
+    "sp = spotipy.Spotify(auth = token)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import spotipy\n",
+    "import spotipy.util as util\n",
+    "from dateutil.parser import parse as parse_date\n",
+    "import plotly.graph_objects as go\n",
+    "from pylab import *\n",
+    "import calplot\n",
+    "\n",
+    "################################################## VARIABLES ###########################################################\n",
+    "\n",
+    "FILE_PATH_API_CREDENTIAL = r\"C:\\Users\\Jaume\\Documents\\Python Projects\\spotify_compare\\data\\external\\api_keys.csv\"\n",
+    "SPOTIPY_SCOPE = \"ugc-image-upload user-read-playback-state streaming user-read-email playlist-read-collaborative \\\n",
+    "    user-modify-playback-state user-read-private playlist-modify-public user-library-modify user-top-read \\\n",
+    "    user-read-playback-position user-read-currently-playing playlist-read-private user-follow-read \\\n",
+    "    app-remote-control user-read-recently-played playlist-modify-private user-follow-modify user-library-read\"\n",
+    "ARTIST = \"artist\""
    ],
    "metadata": {
     "collapsed": false,
